--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -11,7 +11,11 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18.x
-      - run: npm install -g pnpm
       - run: npm ci
       - run: npm run build
+      # Test For pnpm@8
+      - run: npm install -g pnpm@8
+      - run: npm test
+      # Test For pnpm@latest
+      - run: npm install -g pnpm@latest
       - run: npm test
