--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -10,16 +10,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
-      - name: Use Node.js 18
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@f43a0e5ff2bd294095638e18286ca9a3d1956744 # v3.6.0
+      - name: Use Node.js LTS
+        uses: actions/setup-node@3235b876344d2a9aa001b8d1453c930bba69e610 # v3.9.1
         with:
-          node-version: 18.x
-      - run: npm ci
-      - run: npm run build
+          node-version: lts/*
+      - uses: pnpm/action-setup@41ff72655975bd51cab0327fa583b6e92b6d3061 # v4.2.0
+      - run: pnpm install --frozen-lockfile
+      - run: pnpm run build
       # Test For pnpm@8
-      - run: npm install -g pnpm@8
-      - run: npm test
+      - run: pnpm install -g pnpm@8
+      - run: pnpm test
       # Test For pnpm@latest
-      - run: npm install -g pnpm@latest
-      - run: npm test
+      - run: pnpm self-update
+      - run: pnpm test
