--- a/package.json
+++ b/package.json
@@ -42,5 +42,16 @@
     "npm": ">=9.3.1",
     "pnpm": ">=8.10.0",
     "node": ">=18.14.0"
+  },
+  "packageManager": "pnpm@10.20.0",
+  "devEngines": {
+    "packageManager": {
+      "name": "pnpm",
+      "onFail": "error"
+    }
+  },
+  "publishConfig": {
+    "access": "public",
+    "provenance": true
   }
 }
