--- a/package.json
+++ b/package.json
@@ -13,25 +13,18 @@
     "build": "tsc -p tsconfig.build.json",
     "cli": "tsx src/cli.ts",
     "lint": "eslint .",
-    "test": "vitest",
-    "format": "prettier --write src/**/*",
-    "prepare": "husky install"
+    "test": "vitest"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.6.6",
-    "@commitlint/config-conventional": "^17.6.6",
-    "@cybozu/eslint-config": "^20.0.1",
-    "@tsconfig/node18": "^1.0.1",
+    "@cybozu/eslint-config": "^25.0.0",
+    "@tsconfig/node-lts": "^22.0.2",
     "@types/glob": "^8.0.0",
-    "commitlint": "^17.6.6",
-    "eslint": "^8.44.0",
-    "husky": "^8.0.3",
-    "memfs": "^3.5.1",
-    "prettier": "^2.7.1",
-    "tsx": "^3.9.0",
-    "typescript": "^4.8.2",
-    "undici": "^5.20.0",
-    "vitest": "^0.23.4"
+    "eslint": "^9.39.1",
+    "memfs": "^4.50.0",
+    "prettier": "^3.6.2",
+    "tsx": "^4.20.6",
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.8"
   },
   "dependencies": {
     "commander": "^9.4.0",
@@ -41,7 +34,7 @@
   "engines": {
     "npm": ">=9.3.1",
     "pnpm": ">=8.10.0",
-    "node": ">=18.14.0"
+    "node": ">=18.0.0"
   },
   "packageManager": "pnpm@10.20.0",
   "devEngines": {
