--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
   },
   "engines": {
     "npm": ">=9.3.1",
-    "pnpm": ">=8.10.0",
-    "node": ">=18.0.0"
+    "pnpm": ">=8.10.0"
   },
   "packageManager": "pnpm@10.20.0",
   "devEngines": {
